bootstrap/tests/errors/type_mismatch.bmb
// Error test: Type mismatch
// Expected error: type mismatch
fn main() -> i64 = "hello";
